<resources>
    <string name="app_name">ViewTest</string>
    <string name="main_title">实现滑动的几种方法</string>
    <string name="scrollToOrScrollBy">scrollTo/scrollBy</string>
    <string name="animation">属性动画</string>
    <string name="layoutParams">layoutParams</string>
    <string name="scroller">Scroller</string>
    <string name="distouchevent">事件分发</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
