<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="byd.com.byd.viewtest.ViewTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/main_title" />
        <Button
            android:id="@+id/btn_scroll"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_height="@dimen/btn_height"
            android:text="@string/scrollToOrScrollBy"/>
        <Button
            android:id="@+id/btn_animation"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_height="@dimen/btn_height"
            android:text="@string/animation"/>
        <Button
            android:id="@+id/btn_layoutParams"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_height="@dimen/btn_height"
            android:text="@string/layoutParams"/>
        <Button
            android:id="@+id/btn_scroller"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_height="@dimen/btn_height"
            android:text="@string/scroller"/>
        <Button
            android:id="@+id/btn_view_touch"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_height="@dimen/btn_height"
            android:text="@string/distouchevent"/>
        <Button
            android:id="@+id/btn_activity_fragment"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_height="@dimen/btn_height"
            android:text="生命周期探究"/>
    </LinearLayout>
</ScrollView>